--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -23,7 +23,7 @@ $text-color-light: lighten($text-color, 60) !default;
 $type-border: #ddd !default;
 
 /* Navigation */
-$nav-bg: #fff !default;
+$nav-bg: #000 !default;
 $nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11)) !default;
 $nav-color: darken($nav-bg, 55) !default;
 $nav-color-hover: darken($nav-color, 35) !default;
