--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -2,5 +2,8 @@
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
+    <h2>{{ site.author }}</h2>
+
+    <a class="waves-effect waves-light btn">Stuff</a>
   {% endif %}
 </hgroup>
